--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,8 @@
 // Colors
-// Blue 1 #16425b
+// Blue 1 #16425b rgb(22, 66, 91)
 // Blue 2 #2f6690
 // Blue 3 #3a7ca5
-// Blue 4 #81c3d7
+// Blue 4 #81C3D7
 // Gray 1 #d9dcd6
 // Black 1 #0d0d0d
 
@@ -10,15 +10,71 @@ body {
     max-width: 1500px;
     margin:auto;
     background-color: #d9dcd6;
+    font-family: 'Tenor Sans', sans-serif;
+    color: #16425b;
 }
 
+// Links
+NuxtLink {
+    cursor: pointer;
+}
+
+// Buttons
+.btn.btn-primary {
+    background-color: #2f6690;
+    color: #ffffff;
+    border: none;
+    text-transform: uppercase;
+}
+
+.btn.btn-primary:hover,
+.btn.btn-primary:active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn.btn-primary:focus {
+    background-color: #81C3D7;
+}
+
+// Headers
 h1 {
     color: #ffffff;
+    font-family: 'Great Vibes', cursive;
+    font-size: 2.5rem;
+    text-shadow: 0 8px 12px rgba(0,0,0,0.7);
+}
+h2 {
+    color: #16425b;
+    text-transform: uppercase;
 }
 
+// Content
 .content {
     background-color:#ffffff;
     // box-shadow: 0 10px 50px rgba(0,0,0,1);
     // position: relative;
     // z-index: 100;
+}
+
+// Media Queries
+@media (min-width: 768px) {
+    h1 {
+        font-size: 5rem;
+    }
+    body {
+        font-size: 0.875rem;
+    }
+}
+
+@media(min-width: 992px) {
+    body {
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    h1 {
+        font-size: 7rem;
+    }
+    body {
+        font-size: 1.25rem;
+    }
 }
